--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "aoc": "bin/index.js"
   },
   "scripts": {
-    "lint": "eslint . --fix"
+    "lint": "eslint . --report-unused-disable-directives --fix"
   },
   "repository": {
     "type": "git",
