--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       }
     ],
     "no-param-reassign": "off",
-    "no-bitwise": "off"
+    "no-bitwise": "off",
+    "no-restricted-syntax": "off"
   }
 }
