--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     ],
     "no-param-reassign": "off",
     "no-bitwise": "off",
-    "no-restricted-syntax": "off"
+    "no-restricted-syntax": "off",
+    "default-case": "off"
   }
 }
