--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "commander": "^8.3.0",
     "dotenv": "^10.0.0",
     "execa": "^5.1.1",
+    "jsdom": "^18.1.1",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
