--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,24 @@
     "no-restricted-syntax": "off",
     "default-case": "off",
     // This gets in a way when developing initinally
-    "prefer-const": "off"
+    "prefer-const": "off",
+    "no-loop-func": "off",
+    "object-curly-newline": [
+      "error",
+      {
+        "ObjectExpression": {
+          "minProperties": 6,
+          "multiline": true,
+          "consistent": true
+        },
+        "ObjectPattern": {
+          "minProperties": 6,
+          "multiline": true,
+          "consistent": true
+        },
+        "ImportDeclaration": "never",
+        "ExportDeclaration": "never"
+      }
+    ]
   }
 }
