--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   "dependencies": {
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
+    "chokidar": "^3.5.2",
     "commander": "^8.3.0",
     "dotenv": "^10.0.0",
     "execa": "^5.1.1",
     "jsdom": "^18.1.1",
-    "nodemon": "^2.0.15"
+    "prompt": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
