--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,10 @@
     "node": true,
     "es2021": true
   },
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 2021
+    "ecmaVersion": 2021,
+    "requireConfigFile": false
   },
   "extends": [
     "airbnb-base",
