FIX validation logic

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,6 +64,7 @@
       }
     ],
     // This rule doesn't really work, last update was 2 years ago
-    "node/no-unsupported-features/es-syntax": "off"
+    "node/no-unsupported-features/es-syntax": "off",
+    "max-classes-per-file": "off"
   }
 }
