Make sure multiple file changes in a time are handled just once

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^10.0.0",
     "execa": "^6.0.0",
     "jsdom": "^18.1.1",
+    "lodash": "^4.17.21",
     "prompt": "^1.2.0"
   },
   "devDependencies": {
