--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,11 @@
   "hostRequirements": {
     "cpus": 2
   },
-  "onCreateCommand": ["npm link", "npm install"],
-  "containerEnv": {
+  "onCreateCommand": {
+    "link": "npm link",
+    "dependencies": "npm install"
+  },
+  "remoteEnv": {
     "NO_FILE_OPEN": "true",
     "SESSION_COOKIE": "${localEnv:AOC_SESSION_ID}"
   }
