--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,5 +11,11 @@
   "remoteEnv": {
     "NO_FILE_OPEN": "true",
     "SESSION_COOKIE": "${localEnv:AOC_SESSION_ID}"
+  },
+  "secrets": {
+    "AOC_SESSION_ID": {
+      "description": "This would be used as a session cookie for the network requests with the AOC website",
+      "documentationUrl": "https://github.com/bponomarenko/adventofcode?tab=readme-ov-file#configuration"
+    }
   }
 }
