Replace some of the utils with the prototype extensions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,5 +74,15 @@
         "exceptAfterSingleLine": true
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "lib/prototype-extensions.js"
+      ],
+      "rules": {
+        "no-extend-native": "off"
+      }
+    }
+  ]
 }
