It is a bit annoying rule – disable it.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,8 @@
       {
         "exceptAfterSingleLine": true
       }
-    ]
+    ],
+    "prefer-destructuring": "off"
   },
   "overrides": [
     {
